force-app/main/default/objects/Bitbucket_Metadata_Type__mdt/Bitbucket_Metadata_Type__mdt.object-meta.xml
<CustomObject>
    <description>Defines metadata types that can be read from Bitbucket repositories. Each record represents a Salesforce metadata type (e.g., Assignment Rules, Workflows).</description>
    <label>Bitbucket Metadata Type</label>
    <pluralLabel>Bitbucket Metadata Types</pluralLabel>
</CustomObject>