force-app/main/default/objects/Bitbucket_Metadata_Type__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>Whether this metadata type appears in the dropdown</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>