force-app/main/default/objects/Bitbucket_Metadata_Type__mdt/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>Name shown in the dropdown (e.g., &quot;Assignment Rules&quot;)</description>
    <label>Display Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>