force-app/main/default/objects/Bitbucket_Metadata_Type__mdt/fields/Entry_Element__c.field-meta.xml
<CustomField>
    <fullName>Entry_Element__c</fullName>
    <label>Entry Element</label>
    <description>XML element containing individual entries (e.g., "ruleEntry", "rules")</description>
    <type>Text</type>
    <length>100</length>
</CustomField>