force-app/main/default/objects/Bitbucket_Metadata_Type__mdt/fields/File_Extension__c.field-meta.xml
<CustomField>
    <fullName>File_Extension__c</fullName>
    <description>File extension to match (e.g., &quot;.assignmentRules-meta.xml&quot;)</description>
    <label>File Extension</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>