force-app/main/default/objects/Bitbucket_Metadata_Type__mdt/fields/Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Folder_Name__c</fullName>
    <label>Folder Name</label>
    <description>Folder name in the repository (e.g., "assignmentRules", "workflows")</description>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>