force-app/main/default/objects/Bitbucket_Metadata_Type__mdt/fields/Parser_Class__c.field-meta.xml
<CustomField>
    <fullName>Parser_Class__c</fullName>
    <label>Parser Class</label>
    <description>Apex parser class name (e.g., "AssignmentRuleParser"). Leave blank to use GenericMetadataParser.</description>
    <inlineHelpText>Name of the parser class in MetadataParserFactory. If blank, uses GenericMetadataParser which extracts all simple XML elements.</inlineHelpText>
    <type>Text</type>
    <length>100</length>
</CustomField>