force-app/main/default/objects/Bitbucket_Metadata_Type__mdt/fields/Root_Element__c.field-meta.xml
<CustomField>
    <fullName>Root_Element__c</fullName>
    <label>Root Element</label>
    <description>XML root element name for parsing (e.g., "assignmentRule", "Workflow")</description>
    <type>Text</type>
    <length>100</length>
</CustomField>