force-app/main/default/objects/Bitbucket_Metadata_Type__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <description>Order in dropdown menu (lower numbers appear first)</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>100</defaultValue>
</CustomField>