force-app/main/default/objects/Bitbucket_Metadata_Type__mdt/listViews/Full.listView-meta.xml
<ListView>
    <fullName>Full</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>IsProtected</columns>
    <columns>Active__c</columns>
    <columns>Display_Name__c</columns>
    <columns>Entry_Element__c</columns>
    <columns>File_Extension__c</columns>
    <columns>Folder_Name__c</columns>
    <columns>Parser_Class__c</columns>
    <columns>Root_Element__c</columns>
    <columns>Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>Full</label>
    <language>en_US</language>
</ListView>